--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "astro": "^4.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "swiper": "^11.0.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
