--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
-    "@astrojs/node": "^8.1.0",
+    "@astrojs/node": "^8.2.0",
     "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/onest": "^5.0.2",
+    "@libsql/client": "^0.5.0",
     "@material-tailwind/react": "^2.1.8",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.2.6",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swiper": "^11.0.5",
@@ -27,6 +29,8 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "prettier": "3.2.4"
+    "@types/express": "^4.17.21",
+    "prettier": "3.2.4",
+    "sharp": "^0.33.2"
   }
 }
